--- a/SMSLocatorAndroid/bin/AndroidManifest.xml
+++ b/SMSLocatorAndroid/bin/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -28,13 +29,13 @@
             </intent-filter>
         </activity>
         
-        <receiver android:name=".SmsReceiver">
-            <intent-filter>
+        <receiver android:name="com.aa.smslocator.client.android.SmsReceiver" android:enabled="true">
+            <intent-filter android:priority="999">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
         
-        <service android:name=".SmsApiService"></service>
+        <service android:name="com.aa.smslocator.client.android.SmsApiService"></service>
     </application>
 
 </manifest>
