--- a/SMSLocatorAndroid/AndroidManifest.xml
+++ b/SMSLocatorAndroid/AndroidManifest.xml
@@ -11,17 +11,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar" >
         
         <meta-data android:name="com.google.android.gms.version"
            		   android:value="@integer/google_play_services_version" />
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+    			   android:value="AIzaSyAy1oVHAHad7lvpVMfpFWJa5HNERsvM88M"/>        
         
-        <activity android:name="com.aa.smslocator.client.android.MainActivity" android:label="@string/app_name">
+        <activity android:name="MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,13 +38,13 @@
             </intent-filter>
         </activity>
         
-        <receiver android:name="com.aa.smslocator.client.android.SmsReceiver" android:enabled="true">
+        <receiver android:name="SmsReceiver" android:enabled="true">
             <intent-filter android:priority="999">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
         
-        <service android:name="com.aa.smslocator.client.android.SmsApiService"></service>
+        <service android:name="SmsApiService"></service>
     </application>
 
 </manifest>
